[gd_scene load_steps=3 format=3 uid="uid://tu0rjij1il0v"]

[ext_resource type="Script" path="res://Speedrunning/submit_score.gd" id="1_dy5mt"]

[sub_resource type="LabelSettings" id="LabelSettings_sd0a2"]
font_size = 48

[node name="SubmitScore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dy5mt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -29.5
offset_right = 4.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2

[node name="Time" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "15.00s"
label_settings = SubResource("LabelSettings_sd0a2")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
placeholder_text = "Username
"
max_length = 25
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Submit" type="Button" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 2.703, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Submit"

[node name="Skip" type="Button" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(3.784, 1, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Anonymous"

[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Skip" to="." method="_on_skip_pressed"]
